	NX-1102 (Implement event groups)
	NX-1199 (SNMP credentials per-zone)
	NX-1219 (Add 'created' and 'last login' columns to User Manager)
	NX-1271 (Implemented internal server topology)
	NX-1386 (Implemented units for Server Variables)


*
* 2.2.7
*

- "Convert to hexadecimal string" option for SNMP table columns
- Improved configuration wizard in Windows server installer
- Fixed issues:
	NX-993 (Windows installer should honor current state of services during upgrade)
	NX-1438 (Increase debug level for thread pool messages)
	NX-1455 (Zone UIN in NXSL function CreateNode)


*
* 2.2.6
*

- NXSL based queries in object finder
- Fixed issues:
	NX-1395 (Change Object Filter to only search if at least 3 characters have been entered)
	NX-1451 (Additional configs not loaded on agent startup)


*
* 2.2.5
*

- Agent tunnel falls back to unbound mode in case of agent certificate validation failure
- Zone information added to alarm log, event log, SNMP trap log, and syslog
- Agent returns correct free memory value on Windows
- Parameter System.Memory.Physical.Cached supported on Windows
- Fixed issues:
	NX-333 (Add windows service descriptions for both server and agent)
	NX-622 (Alerts will not be generated in certain conditions: events, that persist after maintenence and node down after unreachable)
	NX-640 (File manager should show file owner and permissions)
	NX-716 (Server configurator on Windows should be marked as require-administrator)
	NX-922 (Service check template objects disappears after server restart)
	NX-1097 (Configuration option to ignore alarm's helpdesk state when doing resolve or terminate)
	NX-1157 (configure --with-dist fails if OpenSSL is not installed)
	NX-1397 (Implement Windows Update information parameters for Windows 10 and Windows Server 2016)
	NX-1415 (Windows 10 upgrades break agent tunnels)
	NX-1417 (File.Size parameter not working for Windows pagefile.sys)
	NX-1418 (Sort scripts in Execute Server Script dropdown)