@@ -17,7 +17,7 @@ Root: HKLM; Subkey: "Software\NetXMS\Agent"; ValueType: string; ValueName: "Conf
 Root: HKLM; Subkey: "SOFTWARE\Microsoft\Windows\CurrentVersion\Run"; ValueType: string; ValueName: "NetXMSSessionAgent"; ValueData: """{app}\bin\nxsagent.exe"" -c ""{app}\etc\nxagentd.conf"" -H"; Flags: uninsdeletevalue; Tasks: sessionagent
 
 [Run]
-Filename: "{app}\bin\nxagentd.exe"; Parameters: "-Z ""{app}\etc\nxagentd.conf"" ""{code:GetMasterServer}"" {{syslog} ""{app}\var"" ""{app}\etc\nxagentd.conf.d"" {code:GetSubagentList}"; WorkingDir: "{app}\bin"; StatusMsg: "Creating agent's config..."; Flags: runhidden
+Filename: "{app}\bin\nxagentd.exe"; Parameters: "-Z ""{app}\etc\nxagentd.conf"" ""{code:GetMasterServer}"" {{syslog} ""{app}\var"" ""{app}\etc\nxagentd.conf.d"" {code:GetSubagentList} {code:GetExtraConfigValues}"; WorkingDir: "{app}\bin"; StatusMsg: "Creating agent's config..."; Flags: runhidden
 Filename: "{app}\bin\nxagentd.exe"; Parameters: "-c ""{app}\etc\nxagentd.conf"" {code:GetCentralConfigOption} {code:GetCustomCmdLine} -I"; WorkingDir: "{app}\bin"; StatusMsg: "Installing service..."; Flags: runhidden
 Filename: "{app}\bin\nxagentd.exe"; Parameters: "-s"; WorkingDir: "{app}\bin"; StatusMsg: "Starting service..."; Flags: runhidden
 
@@ -34,7 +34,8 @@ Var
   editServerName: TNewEdit;
   cbDownloadConfig: TNewCheckBox;
   SubagentSelectionPage: TInputOptionWizardPage;
-  serverName, sbECS, sbFileMgr, sbLogWatch, sbPing, sbPortCheck, sbWinPerf, sbWMI, sbUPS, sbDownloadConfig: String;
+  serverName, sbECS, sbFileMgr, sbLogWatch, sbPing, sbPortCheck, 
+    sbWinPerf, sbWMI, sbUPS, sbDownloadConfig, extraConfigValues: String;
 
 #include "..\..\install\windows\firewall.iss"
 
@@ -111,6 +112,7 @@ Begin
   sbWMI := 'FALSE';
   sbUPS := 'FALSE';
   sbDownloadConfig := 'FALSE';
+  extraConfigValues := '';
   
   // Parse command line parameters
   nCount := ParamCount;
@@ -170,6 +172,11 @@ Begin
         sbWMI := 'FALSE';
       If param = 'UPS' Then
         sbUPS := 'FALSE';
+    End;
+
+    If Pos('/CONFIGENTRY=', param) = 1 Then Begin
+      Delete(param, 1, 13);
+      extraConfigValues := extraConfigValues + '~~' + param;
     End;
   End;
 End;
@@ -261,6 +268,14 @@ Begin
     Result := Result + 'wmi.nsm ';
   If SubagentSelectionPage.Values[7] Then
     Result := Result + 'ups.nsm ';
+End;
+
+Function GetExtraConfigValues(Param: String): String;
+Begin
+  If extraConfigValues <> '' Then
+    Result := '-z ' + extraConfigValues
+  Else
+    Result := ''
 End;
 
 Function GetCentralConfigOption(Param: String): String;
