@@ -22,6 +22,7 @@
 
 - "Convert to hexadecimal string" option for SNMP table columns
 - Improved configuration wizard in Windows server installer
+- New command line option /CONFIGENTRY in Windows agent installer
 - Fixed issues:
 	NX-993 (Windows installer should honor current state of services during upgrade)
 	NX-1438 (Increase debug level for thread pool messages)
